--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=Polski123!
+spring.datasource.url=jdbc:mysql://localhost:3306/sda?serverTimezone=UTC
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
