--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=tensonLT10
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
