--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=roots
+spring.datasource.url=jdbc:mysql://localhost:3306/airline_system?serverTimezone=UTC
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
